# AxiomCore

./: .gitignore  Cargo.toml  README.md  SECURITY.md
.github/workflows/: test-axiom.yml
cli/: Cargo.toml
cli/src/: auth_store.rs  error_reporter.rs  main.rs  state.rs  telemetry.rs
cli/src/commands/: deploy.rs  diff.rs  init.rs  mod.rs  project.rs  pull.rs  release.rs  serve.rs  test.rs  watch.rs
cli/src/components/: error_overlay.rs  init_wizard.rs  login_screen.rs  mod.rs  pull_wizard.rs
cli/src/components/inspect/: endpoint_detail.rs  endpoint_list.rs  model_browser.rs
crates/axiom-cli/: Cargo.toml
crates/axiom-cli/src/: main.rs
crates/axiom-lib/: Cargo.toml
crates/axiom-lib/src/: api.rs  config.rs  error.rs  lib.rs
crates/axiom-lib/src/commands/: build.rs  init.rs  install.rs  mod.rs  release.rs
crates/axiom-lib/src/core/: compiler.rs  extractor.rs  mod.rs  packager.rs
docs/content/docs/acore-language/: amends.mdx  backend-objects.mdx  syntax-overview.mdx
examples/observability-and-auth/: .axiom  axiom.acore  config.json  test_server.py
examples/observability-and-auth/example/: .axiom  axiom.yaml  pubspec.yaml
examples/observability-and-auth/example/lib/: clear.dart  main.dart
examples/observability-and-auth/example/lib/axiom_generated/: axiom_sdk.dart  models.dart
examples/offline-first-feed/backend/: .axiom  axiom.acore  axiom.acore.lockfile  main.py
examples/offline-first-feed/frontend/atmx-web/: AxiomDeps.toml  index.html
examples/realtime-chat/backend/go-chat/: axiom.acore  axiom.acore.lockfile  go.mod  main.go
examples/realtime-chat/frontend/atmx-react/: AxiomDeps.toml  index.html  package-lock.json  package.json
examples/realtime-chat/frontend/atmx-web/: AxiomDeps.toml  index.html
examples/realtime-chat/frontend/axiom_flutter_web/: AxiomDeps.toml  README.md  pubspec.yaml
examples/rpc/: .axiom  axiom.acore  config.json  test_server.py
examples/rpc/example/: pubspec.yaml
examples/rpc/example/lib/: main.dart
examples/rpc/example/lib/axiom_generated/: models.dart  (+1 more)
examples/simple-backend/: .axiom  axiom.acore  axiom.acore.lockfile  main.py
examples/simple-backend/backend/go-example/: go.mod  main.go
examples/simple-backend/backend/py-example/: .axiom  axiom.acore  axiom.acore.lockfile  main.py
examples/simple-backend/frontend/atmx-react/: AxiomDeps.toml  index.html  package-lock.json  package.json
examples/simple-backend/frontend/atmx-web/: atmx.config.json  index.html  package-lock.json  py-example.axiom
examples/simple-backend/frontend/axiom_flutter_web/: AxiomDeps.toml  pubspec.yaml
examples/simple-backend/go-example/: axiom.acore
examples/stream/: .axiom  axiom.acore  config.json  test_server.py
examples/stream/example/: pubspec.yaml
examples/stream/example/lib/: main.dart
release/: .release_todo  justfile
release/.summary_files/: code_summary.md  collapsed_folders.json  previous_selection.json
release/atmx-cli/: package-lock.json  package.json  tsconfig.json
release/atmx-cli/.summary_files/: code_summary.md  previous_selection.json
release/atmx-cli/src/: index.ts  types.ts
release/atmx-cli/src/generators/: model-generator.ts  sdk-generator.ts  utils.ts
release/cli/: .gitignore  justfile
release/cli/scripts/: build.sh  publish.sh  release.sh
release/extractors/scripts/: publish.sh
release/scripts/: build_apple.sh  publish_apple.sh  publish_sdk.sh  wasm.sh
src/: access_config.rs  auth_store.rs  main.rs  state.rs  tui.rs
src/commands/: build.rs  cache.rs  init.rs  install.rs  join.rs  mod.rs  project.rs  pull.rs  release.rs  watch.rs
src/components/: build_dashboard.rs  cache_explorer.rs  fuzzy_finder.rs  init_wizard.rs  pull_wizard.rs  watch_hud.rs
src/components/inspect/: mod.rs  model_browser.rs
(+19 files in other folders)
