[package]
name = "axiom-cli"
version = "0.39.0"
edition = "2021"

[dependencies]
axiom-lib = { path = "../../axiom-lib" }
axiom-cloud = { path = "../../axiom-cloud" }
axiom-extractor = { path = "../../axiom-extractor" }
axiom-build = { path = "../../axiom-build" }
acore = { path = "../../acore" }
acore-diff = { path = "../../acore-diff" }
axiom-mock = { path = "../../axiom-mock" }
axiom-test-runner = { path = "../../axiom-test-runner" }

# UI Core
ratatui = "0.26"
crossterm = { version = "0.27", features = ["event-stream", "serde"] }
color-eyre = "0.6"
tui-input = "0.8"
tui-textarea = "0.4"
syntect = "5.0"
fuzzy-matcher = "0.3"

# Enums & Utilities
strum = { version = "0.26", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
futures = "0.3"
lazy_static = "1.4"
regex = "1.10"
uuid = { version = "1.0", features = ["v4", "serde"] }
directories = "5.0"
os_info = "1.0"

clap = { version = "4.4", features = ["derive"] }
notify = "6.1"
anyhow = "1.0"
console = "0.15"
indicatif = "0.17"
serde_yaml = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
toml_edit = "0.22"
ed25519-dalek = "2.0"
chrono = { version = "0.4", features = ["serde"] }
sled = "0.34"
bincode = "1.3"
dialoguer = "0.12.0"
